# clipper

./: .gitignore  QuickClipper.slnx  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  release.yml
QuickClipper/: App.xaml  App.xaml.cs  AppSettings.cs  BenchmarkReportWindow.xaml  BenchmarkReportWindow.xaml.cs  CaptureRegion.cs  FfmpegService.cs  HotKeyBinding.cs  HotKeyService.cs  LoopbackAudioRecorder.cs  MainWindow.xaml  MainWindow.xaml.cs  OverlayWindow.xaml  OverlayWindow.xaml.cs  Program.cs  QuickClipper.csproj  RecordingOverlayWindow.xaml  RecordingOverlayWindow.xaml.cs  SettingsService.cs  StartupService.cs  UpdateService.cs
scripts/: BuildInstallLaunch.ps1  CreateLatestJson.ps1
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri-updater.key.pub  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  select.tsx  separator.tsx
